# offer-holder-agent

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.tencent.yml  pyproject.toml  render.yaml  requirements.txt  source_list.csv
agent/: __init__.py  intent_router.py  llm_prompt.py  openai_responses.py  rag_retriever.py  response_generator.py  risk_checker.py  task_planner.py  task_state.py  user_state.py
app/: __init__.py  console.py  dashboard_api.py  frontend_server.py  runtime_data.py  start_server.py
crawler/: __init__.py  block_detection.py  crawl_pages.py  dynamic_crawl_pages.py  expand_faq_pages.py  import_manual_page.py  summarize_crawl.py
deploy/: env.example
docs/: manual_review_guide.md  phase2_initial_agent_implementation.md
frontend/: index.html
frontend-react/: index.html  package-lock.json  vite.config.js
knowledge_base/: __init__.py  audit_data_quality.py  audit_task_evidence_quality.py  build_chunks.py  chunks.csv  clean_faq.py  enrich_tasks.py  extract_faq.py  extract_task_evidence.py  phase1_outputs.py  review_enriched_tasks.py  reviewed_tasks.py  vector_index.csv  vector_index.py
tests/: test_clean_faq.py  test_console_task_workflow.py  test_crawl_pages.py  test_crawl_summary_and_quality.py  test_dashboard_api.py  test_dynamic_crawl_pages.py  test_expand_faq_pages.py  test_extract_faq.py  test_extract_task_evidence.py  test_import_manual_page.py  test_initial_agent.py  test_next_step_scaffolding.py  test_openai_responses.py  test_phase1_outputs.py  test_review_enriched_tasks.py  test_reviewed_tasks.py  (+3 more)
(+31 files in other folders)
