[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-offer-agent"
version = "0.1.0"
description = "Data collection and initial retrieval-based workflow agent for Hong Kong offer holders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "chromadb>=1.0,<2",
  "lxml>=5,<7",
  "pandas>=2.2,<4",
  "playwright>=1.49,<2",
  "pypdf>=4,<6",
  "requests>=2.32,<3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
